fontend work for style across the templates, collapsed borders on tables and highlighted them with new theming, headings adjusted in update, added tags in slicer, fixed row tags and body tags in index

--- a/legendparse/static/style.css
+++ b/legendparse/static/style.css
@@ -6,12 +6,25 @@ h2 {
     color: #FFFFFF;
 }
 
+table {
+    border-width: 1px;
+    border-style: solid;
+    border-color: #E8FBFF;
+    border-collapse: collapse;
+}
+
 th {
-    color: #FFFFFF;
+    color: #FFF8EE;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #E8FBFF;
 }
 
 td {
-    color: #F2F2EF;
+    color: #FFF8EE;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #E8FBFF;
 }
 
 a {
